rbx_xml/src/tests/snapshots/rbx_xml__tests__unions__decoded.snap
---
source: rbx_xml/src/tests/mod.rs
expression: "DomViewer::new().view_children(&decoded)"
---
- referent: referent-0
  name: Red Union 1
  class: UnionOperation
  properties:
    Anchored:
      Bool: false
    Attributes:
      Attributes: {}
    BackParamA:
      Float32: -0.5
    BackParamB:
      Float32: 0.5
    BackSurface:
      Enum: 0
    BackSurfaceInput:
      Enum: 0
    BottomParamA:
      Float32: -0.5
    BottomParamB:
      Float32: 0.5
    BottomSurface:
      Enum: 0
    BottomSurfaceInput:
      Enum: 0
    CFrame:
      CFrame:
        position:
          - 0
          - 0
          - 0
        orientation:
          - - 1
            - 0
            - 0
          - - 0
            - 1
            - 0
          - - 0
            - 0
            - 1
    CanCollide:
      Bool: true
    CastShadow:
      Bool: true
    CollisionGroupId:
      Int32: 0
    Color:
      Color3uint8:
        - 196
        - 40
        - 28
    CustomPhysicalProperties:
      PhysicalProperties: Default
    FrontParamA:
      Float32: -0.5
    FrontParamB:
      Float32: 0.5
    FrontSurface:
      Enum: 0
    FrontSurfaceInput:
      Enum: 0
    LeftParamA:
      Float32: -0.5
    LeftParamB:
      Float32: 0.5
    LeftSurface:
      Enum: 0
    LeftSurfaceInput:
      Enum: 0
    Locked:
      Bool: false
    Massless:
      Bool: false
    Material:
      Enum: 256
    PhysicalConfigData:
      len: 1803
      hash: db0e2bce2a871addfc49da3894a9b0c8ef97b3b83c962717ece20aa97635fee3
    Reflectance:
      Float32: 0
    RenderFidelity:
      Enum: 1
    RightParamA:
      Float32: -0.5
    RightParamB:
      Float32: 0.5
    RightSurface:
      Enum: 0
    RightSurfaceInput:
      Enum: 0
    RootPriority:
      Int32: 0
    RotVelocity:
      Vector3:
        - 0
        - 0
        - 0
    Size:
      Vector3:
        - 5
        - 2
        - 2
    SmoothingAngle:
      Float32: 0
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    TopParamA:
      Float32: -0.5
    TopParamB:
      Float32: 0.5
    TopSurface:
      Enum: 0
    TopSurfaceInput:
      Enum: 0
    Transparency:
      Float32: 0
    UsePartColor:
      Bool: false
    Velocity:
      Vector3:
        - 0
        - 0
        - 0
  children: []
- referent: referent-1
  name: Red Union 2
  class: UnionOperation
  properties:
    Anchored:
      Bool: false
    Attributes:
      Attributes: {}
    BackParamA:
      Float32: -0.5
    BackParamB:
      Float32: 0.5
    BackSurface:
      Enum: 0
    BackSurfaceInput:
      Enum: 0
    BottomParamA:
      Float32: -0.5
    BottomParamB:
      Float32: 0.5
    BottomSurface:
      Enum: 0
    BottomSurfaceInput:
      Enum: 0
    CFrame:
      CFrame:
        position:
          - -7
          - 0
          - 0
        orientation:
          - - 1
            - 0
            - 0
          - - 0
            - 1
            - 0
          - - 0
            - 0
            - 1
    CanCollide:
      Bool: true
    CastShadow:
      Bool: true
    CollisionGroupId:
      Int32: 0
    Color:
      Color3uint8:
        - 196
        - 40
        - 28
    CustomPhysicalProperties:
      PhysicalProperties: Default
    FrontParamA:
      Float32: -0.5
    FrontParamB:
      Float32: 0.5
    FrontSurface:
      Enum: 0
    FrontSurfaceInput:
      Enum: 0
    LeftParamA:
      Float32: -0.5
    LeftParamB:
      Float32: 0.5
    LeftSurface:
      Enum: 0
    LeftSurfaceInput:
      Enum: 0
    Locked:
      Bool: false
    Massless:
      Bool: false
    Material:
      Enum: 256
    PhysicalConfigData:
      len: 1803
      hash: db0e2bce2a871addfc49da3894a9b0c8ef97b3b83c962717ece20aa97635fee3
    Reflectance:
      Float32: 0
    RenderFidelity:
      Enum: 1
    RightParamA:
      Float32: -0.5
    RightParamB:
      Float32: 0.5
    RightSurface:
      Enum: 0
    RightSurfaceInput:
      Enum: 0
    RootPriority:
      Int32: 0
    RotVelocity:
      Vector3:
        - 0
        - 0
        - 0
    Size:
      Vector3:
        - 5
        - 2
        - 2
    SmoothingAngle:
      Float32: 0
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    TopParamA:
      Float32: -0.5
    TopParamB:
      Float32: 0.5
    TopSurface:
      Enum: 0
    TopSurfaceInput:
      Enum: 0
    Transparency:
      Float32: 0
    UsePartColor:
      Bool: false
    Velocity:
      Vector3:
        - 0
        - 0
        - 0
  children: []
- referent: referent-2
  name: Blue Union
  class: UnionOperation
  properties:
    Anchored:
      Bool: false
    Attributes:
      Attributes: {}
    BackParamA:
      Float32: -0.5
    BackParamB:
      Float32: 0.5
    BackSurface:
      Enum: 0
    BackSurfaceInput:
      Enum: 0
    BottomParamA:
      Float32: -0.5
    BottomParamB:
      Float32: 0.5
    BottomSurface:
      Enum: 0
    BottomSurfaceInput:
      Enum: 0
    CFrame:
      CFrame:
        position:
          - -4
          - -3.5
          - 0
        orientation:
          - - 1
            - 0
            - 0
          - - 0
            - 1
            - 0
          - - 0
            - 0
            - 1
    CanCollide:
      Bool: true
    CastShadow:
      Bool: true
    CollisionGroupId:
      Int32: 0
    Color:
      Color3uint8:
        - 13
        - 105
        - 172
    CustomPhysicalProperties:
      PhysicalProperties: Default
    FrontParamA:
      Float32: -0.5
    FrontParamB:
      Float32: 0.5
    FrontSurface:
      Enum: 0
    FrontSurfaceInput:
      Enum: 0
    LeftParamA:
      Float32: -0.5
    LeftParamB:
      Float32: 0.5
    LeftSurface:
      Enum: 0
    LeftSurfaceInput:
      Enum: 0
    Locked:
      Bool: false
    Massless:
      Bool: false
    Material:
      Enum: 256
    PhysicalConfigData:
      len: 1367
      hash: cc62d7045ec238081b7ebbd97ce5ce7dc15166e688168c307247089135718bdb
    Reflectance:
      Float32: 0
    RenderFidelity:
      Enum: 1
    RightParamA:
      Float32: -0.5
    RightParamB:
      Float32: 0.5
    RightSurface:
      Enum: 0
    RightSurfaceInput:
      Enum: 0
    RootPriority:
      Int32: 0
    RotVelocity:
      Vector3:
        - 0
        - 0
        - 0
    Size:
      Vector3:
        - 4
        - 2
        - 2
    SmoothingAngle:
      Float32: 0
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    TopParamA:
      Float32: -0.5
    TopParamB:
      Float32: 0.5
    TopSurface:
      Enum: 0
    TopSurfaceInput:
      Enum: 0
    Transparency:
      Float32: 0
    UsePartColor:
      Bool: false
    Velocity:
      Vector3:
        - 0
        - 0
        - 0
  children: []
